{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 23,
  "lineage": "bb9b090c-7a4a-4e2e-bd91-a5b0135dcd63",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804263606815:vpc/vpc-09192692c2528ac94",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-075b9eb0e85365d17",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-546a102e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09192692c2528ac94",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057d2f8e1229c1168",
            "owner_id": "804263606815",
            "tags": {
              "Env": "Dev",
              "Name": "demo",
              "created": "Terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f387434d1dfc4cc2",
            "arn": "arn:aws:ec2:us-east-1:804263606815:instance/i-0e0f01417bd0a43c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm__profile",
            "id": "i-0e0f01417bd0a43c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b15fc9c61bb3fdc2",
            "private_dns": "ip-10-0-102-50.ec2.internal",
            "private_ip": "10.0.102.50",
            "public_dns": "ec2-3-88-234-175.compute-1.amazonaws.com",
            "public_ip": "3.88.234.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af558de8905620ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c320d7b35cb8706",
            "tags": {
              "Name": "kube-master",
              "Role": "master",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tags_all": {
              "Name": "kube-master",
              "Role": "master",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a40be6d18d542417",
              "sg-0c0c43dd54245a2dc",
              "sg-0e7892476cc918e09"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_key_pair.mykeypair",
            "aws_security_group.Demo-kube-master-sg",
            "aws_security_group.Demo-kube-mutual-sg",
            "aws_security_group.allow-ssh",
            "data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f387434d1dfc4cc2",
            "arn": "arn:aws:ec2:us-east-1:804263606815:instance/i-094995194d579eb29",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm__profile",
            "id": "i-094995194d579eb29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a97b01e23e014443",
            "private_dns": "ip-10-0-102-56.ec2.internal",
            "private_ip": "10.0.102.56",
            "public_dns": "ec2-18-204-17-251.compute-1.amazonaws.com",
            "public_ip": "18.204.17.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa4c5bb308ba0c7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c320d7b35cb8706",
            "tags": {
              "Name": "kube-worker",
              "Role": "worker",
              "created": "terraform",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tags_all": {
              "Name": "kube-worker",
              "Role": "worker",
              "created": "terraform",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e5f9c47bb84d8b0",
              "sg-0a40be6d18d542417",
              "sg-0c0c43dd54245a2dc"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_key_pair.mykeypair",
            "aws_security_group.Demo-kube-mutual-sg",
            "aws_security_group.Demo-kube-worker-sg",
            "aws_security_group.allow-ssh",
            "data.aws_subnet_ids.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f387434d1dfc4cc2",
            "arn": "arn:aws:ec2:us-east-1:804263606815:instance/i-0af484cc180871faa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_ssm__profile",
            "id": "i-0af484cc180871faa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0409aa25752edc2c6",
            "private_dns": "ip-10-0-102-199.ec2.internal",
            "private_ip": "10.0.102.199",
            "public_dns": "ec2-54-147-150-177.compute-1.amazonaws.com",
            "public_ip": "54.147.150.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0351268639b483cc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c320d7b35cb8706",
            "tags": {
              "Name": "kube-worker",
              "Role": "worker",
              "created": "terraform",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tags_all": {
              "Name": "kube-worker",
              "Role": "worker",
              "created": "terraform",
              "kubernetes.io/cluster/kubeadm": "owned",
              "type": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e5f9c47bb84d8b0",
              "sg-0a40be6d18d542417",
              "sg-0c0c43dd54245a2dc"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_key_pair.mykeypair",
            "aws_security_group.Demo-kube-mutual-sg",
            "aws_security_group.Demo-kube-worker-sg",
            "aws_security_group.allow-ssh",
            "data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Demo-kube-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804263606815:security-group/sg-0e7892476cc918e09",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7892476cc918e09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10252,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 2380
              }
            ],
            "name": "kube-master-sec-group-for-Demo",
            "name_prefix": "",
            "owner_id": "804263606815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-master-secgroup"
            },
            "tags_all": {
              "Name": "kube-master-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09192692c2528ac94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Demo-kube-mutual-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Demo-kube-mutual-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804263606815:security-group/sg-0a40be6d18d542417",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a40be6d18d542417",
            "ingress": [],
            "name": "kube-mutual-sec-group-for-Demo",
            "name_prefix": "",
            "owner_id": "804263606815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-mutual-secgroup"
            },
            "tags_all": {
              "Name": "kube-mutual-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09192692c2528ac94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Demo-kube-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804263606815:security-group/sg-01e5f9c47bb84d8b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e5f9c47bb84d8b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0a40be6d18d542417"
                ],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "kube-worker-sec-group-for-Demo",
            "name_prefix": "",
            "owner_id": "804263606815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-worker-secgroup"
            },
            "tags_all": {
              "Name": "kube-worker-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-09192692c2528ac94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Demo-kube-mutual-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804263606815:security-group/sg-0c0c43dd54245a2dc",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0c43dd54245a2dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "804263606815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09192692c2528ac94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}